tests/compile_fail/machine_module/non_empty_module.rs
use moku::*;

#[state_machine]
mod blinky {
    use moku::*;

    #[machine_module]
    mod machine {
        const SOMETHING: &str = "something";
    }
}

fn main() {}
